--- a/ETL_B3.ipynb
+++ b/ETL_B3.ipynb
@@ -34,7 +34,7 @@
     "              (108,121), \n",
     "              (152,170),\n",
     "              (170,188)]\n",
-    "    names = ['Data_pregao', 'Codbdi', 'Sigla_acao', 'nome_acao', 'Preco_abertura', 'Preco_Maximo', 'Preco_Minimo', 'Preco_Fechamento', 'Quantidade_negociacao', \n 'Volume_de_negociacao']\n",
+    "    names = ['Data_pregao', 'Codbdi', 'Sigla_acao', 'nome_acao', 'Preco_abertura', 'Preco_Maximo', 'Preco_Minimo', 'Preco_Fechamento', \n 'Quantidade_negociacao', 'Volume_de_negociacao']",
     "    df = pd.read_fwf(_file, colspecs=colspecs, names=names, skiprows =1)\n",
     "    \n",
     "    return df"
