--- a/ETL_B3.ipynb
+++ b/ETL_B3.ipynb
@@ -52,7 +52,7 @@
     "    df = df [df['Codbdi']== 2]\n",
     "    df = df.drop(['Codbdi'], 1)\n",
     "    \n",
-    "    return df"
+    "    return df" \n
    ]
   },
   {
